@@ -29,10 +29,10 @@ pipeline.prepareAnnotation <- function()
     biomart.table <- NULL
 
     try({
-      mart <- useMart('ensembl')
+      mart <- useMart('ENSEMBL_MART_ENSEMBL',host="www.ensembl.org")
       mart <- useDataset(preferences$database.dataset, mart=mart)
 
-      query = c("wikigene_name","hgnc_symbol","uniprot_genename")[ which( c("wikigene_name","hgnc_symbol","uniprot_genename") %in% listAttributes(mart)[,1] ) ][1]
+      query = c("hgnc_symbol","wikigene_name","uniprot_genename")[ which( c("hgnc_symbol","wikigene_name","uniprot_genename") %in% listAttributes(mart)[,1] ) ][1]
       biomart.table <-
         getBM(c(preferences$database.id.type, query),
               preferences$database.id.type,
@@ -61,10 +61,10 @@ pipeline.prepareAnnotation <- function()
   }
   
 
-  mart <- useMart('ensembl')
+  mart <- useMart('ENSEMBL_MART_ENSEMBL',host="www.ensembl.org")
   mart <- useDataset(preferences$database.dataset, mart=mart)
 
-  query = c("hgnc_symbol","wikigene_name","uniprot_genename")[ which( c("hgnc_symbol","wikigene_name","uniprot_genename") %in% listAttributes(mart)[,1] ) ][1]
+  query = c("wikigene_name","hgnc_symbol","uniprot_genename")[ which( c("wikigene_name","hgnc_symbol","uniprot_genename") %in% listAttributes(mart)[,1] ) ][1]
   biomart.table <- getBM(c(preferences$database.id.type,
                            query,
                            "description",
